<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:paddingTop="5px"
            app:srcCompat="@android:color/holo_blue_dark"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_margin="12dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/articulo"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="?android:attr/colorControlHighlight"
                android:padding="5dp"
                android:text="@string/_articulo"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/descripcion"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/colorControlHighlight"
                android:padding="5dp"
                android:text="@string/_descripcion"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/precio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/colorControlHighlight"
                android:padding="5dp"
                android:text="@string/_precio"
                android:textAlignment="viewStart"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>